# daily-ayat-hadith-generator

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json  main.py  pyproject.toml  state.json
src/daily_ayat_hadith/: __init__.py  alhadees_scraper.py  database.py  hadith_provider.py  image_generator.py  main.py  state.py  sunnah_scraper.py  translation_generator.py
