[project]
name = "daily-ayat-and-hadith"
version = "1.0.0"
description = "Automated generator for beautiful Islamic graphics featuring daily Quran verses (Ayat) and Hadith from Mishkaat ul-Masabih"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Daily Ayat & Hadith Contributors"}
]
keywords = ["islamic", "quran", "hadith", "generator", "graphics", "daily", "ayat"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Religion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "hijridate>=2.3.0",
    "pillow>=12.1.0",
    "requests>=2.31.0",
    "pydantic-ai>=0.0.14",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/faisal-saddique/daily-ayat-hadith-generator"
Repository = "https://github.com/faisal-saddique/daily-ayat-hadith-generator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_ayat_hadith"]

[tool.uv]
dev-dependencies = []
